2011-05-29  Dirk Eddelbuettel  <edd@debian.org>

	* Release 0.5.0

2011-05-26  Dirk Eddelbuettel  <edd@debian.org>

	* R/hmac.R: Switched to camelCase identifiers after discussion with
 	  Henrik and Mario

2011-05-25  Dirk Eddelbuettel  <edd@debian.org>

	* R/hmac.R: New hmac() function contributed by Mario Frasca
	* man/hmac.Rd: Documentation contributed by Mario Frasca

	* tests/hmacTest.R: Added a new regression test file for hmac()
	* tests/hmacTest.Rout.save: Added new reference output

	* tests/digestTest.Rout.save: Updated reference digest output
	  for simple R structure to match what R 2.13.0 yields

	* inst/ChangeLog: moved to ChangeLog (in top-level directory)

	* INDEX: removed, as no longer needed

2009-12-03  Henrik Bengtsson  <henrikb@braju.com>

	* Release 0.4.2

	* R/digest.R: Bug fix - digest(object, file=TRUE) where object
	  is a directory would cause R to crash.  Now it gives an error.

2009-10-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: set SVN properties Date and Id, fix indentation

2009-09-24  Dirk Eddelbuettel  <edd@debian.org>

	* Release 0.4.1

	* src/Makefile.win: Removed as package builds on Windows without it
	  but not with it being present

	* src/digest.c: Updated Copyright years, set SVN properties Date and Id
	* R/digest.R: Idem
	* man/digest.Rd: Idem

2009-09-23  Dirk Eddelbuettel  <edd@debian.org>

	* Release 0.4.0

	* src/sha256.c: Added sha-256 implementation by Christophe Devine
	  as found (via Google Code Search) in a number of Open Source
	  projects such as mushclient, aescrypt2, scrypt, and ipanon
	* src/sha256.h: Idem

	* src/digest.c: Modified to support SHA-256
	* R/digest.R: Idem
	* man/digest.Rd: Idem, also added more references

	* src/Makefile.win: Updated for SHA-256, and generally spruced up

2007-09-28  Dirk Eddelbuettel  <edd@debian.org>

	* Release 0.3.1

	* DESCRIPTION: Switched to standardised form 'GPL-2' for License:

	* src/digest.c: Added one explicit (char *) cast
