@@ -1,9 +1,9 @@
 Package: digest
-Version: 0.5.0
+Version: 0.5.0.1
 Date: $Date$
 Author: Dirk Eddelbuettel <edd@debian.org> with contributions 
- by Antoine Lucas, Jarek Tuszynski, Henrik Bengtsson, Simon Urbanek
- and Mario Frasca.
+ by Antoine Lucas, Jarek Tuszynski, Henrik Bengtsson, Simon Urbanek,
+ Mario Frasca and Bryan Lewis.
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Title: Create cryptographic hash digests of R objects
 Description: The digest package provides a function 'digest()' for the 
