@@ -15,7 +15,8 @@
 }
 \usage{
 digest(object, algo=c("md5", "sha1", "crc32", "sha256"), 
-       serialize=TRUE, file=FALSE, length=Inf, skip="auto", ascii=FALSE)
+       serialize=TRUE, file=FALSE, length=Inf, skip="auto", ascii=FALSE,
+       leaveRaw=FALSE)
 }
 \arguments{
   \item{object}{An arbitrary R object which will then be passed to the
@@ -46,6 +47,9 @@ digest(object, algo=c("md5", "sha1", "crc32", "sha256"),
   \item{ascii}{This flag is passed to the \code{serialize} function if
     \code{serialize} is set to \code{TRUE}, determining whether the hash
     is computed on the ASCII or binary represenataion.}
+  \item{leaveRaw}{Set to TRUE to return digest output in raw (binary)
+    form. The default value of FALSE returns digest output as ASCII
+    hex values.}
 }
 \value{
   The \code{digest} function returns a character string of a fixed
