@@ -1,3 +1,11 @@
+2011-09-14  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/digest.c: Applied patch contributed by Bryan Lewis which
+	supports output of unmodified raw binary output if a new function
+	parameter 'leaveRaw' (which defaults to FALSE) is set to TRUE
+	* R/digest.R: Support new parameter 'leaveRaw'
+	* man/digest.Rd: Document new parameter 'leaveRaw'
+
 2011-05-29  Dirk Eddelbuettel  <edd@debian.org>
 
 	* Release 0.5.0
